# nino-ai-chat

./: .gitignore  README.md  cil_shell.py  core.py  data.py  install.py  pyproject.toml  shell.py
data/: config.json
templates/: data.html  index.html  login.html
