[project]
name            = "Nino"
version         = "2.4.0"
description     = "Nino是一款轻量级、开源的AI聊天软件，专注于陪伴与理解用户。"
license         = "GPL-3.0"
authors         = ["Pinpe <813233375@qq.com>"]
readme          = "README.md"
repository      = "https://github.com/Pinpe/nino-ai-chat"
keywords        = ["chat", "agent", "ai", "life", "psychology"]
homepage        = ""
documentation   = ""
requires-python = ">=3.11"
dependencies    = [
    "flask",
    "typer",
    "openai",
    "requests"
]